Move solution file in the root directory; Set MainWindow start position;

--- a/WpfApp/Views/MainWindow.xaml
+++ b/WpfApp/Views/MainWindow.xaml
@@ -10,7 +10,7 @@
         d:DataContext="{d:DesignInstance Type=viewmodels:MainWindowViewModel}"
         Title="{Binding Title}"
         Height="300"
-        Width="460">
+        Width="460" WindowStartupLocation="CenterScreen">
     <Window.Resources>
         <BooleanToVisibilityConverter x:Key="BoolToVis"/>
     </Window.Resources>
